# ai_playground

./: Cargo.toml
ai/: Cargo.toml
ai/src/: gradient_descent.rs  locally_weighted_gradient_descent.rs  parametric_algorithm.rs
ai/src/data_reader/: cvs_reader.rs  mod.rs
linalg/: Cargo.toml
linalg/src/: cholesky.rs  dot.rs  lib.rs  mod.rs
linalg/src/algorithms/gradient_descent/: builder_impl.rs  gradient_descent_impl.rs  mod.rs
linalg/src/array/: array.rs  mod.rs  storage_trait.rs
linalg/src/array/ndarray/: mod.rs  ndarray.rs  ndarray_common_impl.rs  ndarray_impl.rs  ndstorage.rs  twodarray_impl.rs
linalg/src/array/ndarray/nddata/: layout_impl.rs  mod.rs  ndstorage_impl.rs  twodstorage_impl.rs
linalg/src/array/ndarray/nddata_view/: mod.rs
linalg/src/array/ndarray/ndstorage/: common_data_impl.rs  common_storage_impl.rs  common_twodstorage_impl.rs  mod.rs  owned_data_impl.rs  owned_storage_impl.rs  owned_twodstorage_impl.rs
linalg_macros/: Cargo.toml
linalg_macros/src/: lib.rs
linalg_macros/tests/: integration_test.rs
resources/: 1.csv  3.csv
src/: base_gradient_descent.rs  batch_gradient_descent.rs  fittable_model.rs  gradient_descent.rs  lib.rs  linear_regression.rs  lms.rs  locally_weighted_gradient_descent.rs  main.rs  normal_equation.rs  parametric_algorithm.rs  parametric_gradient_descent.rs  stochastic_gradient_descent.rs  training_data.rs
src/array/: array_base.rs  mod.rs  types.rs
src/linalg/: arithmetic.rs  array_base.rs  error.rs  mod.rs
src/lms/: batch_kernel.rs  kernel.rs  mod.rs  stochastic_kernel.rs
src/window/: mod.rs
